# src/domio/handlers/create_subscription_handler/create_subscription_handler.go
@@ -7,15 +7,14 @@ import (
     "domio/components/responses"
     "domio/components/requests"
     "github.com/stripe/stripe-go"
-    "log"
     "github.com/stripe/stripe-go/sub"
+    "domio/db"
 )
 
 type NewSubscription struct {
-    Name     string `json:"name"`
-    Interval stripe.PlanInterval `json:"interval"`
-    Amount   uint64 `json:"amount"`
-    ID       string `json:"id"`
+    Name       string `json:"name"`
+    Domain     string `json:"domain"`
+    CustomerId string `json:"customer_id"`
 }
 
 func CreateSubscriptionHandler(w http.ResponseWriter, req *http.Request) {
@@ -34,7 +33,8 @@ func CreateSubscriptionHandler(w http.ResponseWriter, req *http.Request) {
         responses.ReturnErrorResponse(w, domioerrors.JsonDecodeError)
         return
     }
-    log.Print(userProfile)
+
+    newSubscription.CustomerId = userProfile.Id
 
     stripeSubscription, subscriptionCreationError := createSubscription(&newSubscription)
 
@@ -49,13 +49,17 @@ func CreateSubscriptionHandler(w http.ResponseWriter, req *http.Request) {
 }
 
 func createSubscription(newSubscription *NewSubscription) (stripe.Sub, error) {
-    log.Print(newSubscription)
     stripe.Key = "sk_test_83T7gLMq9VQ4YLmWwBylJMS7"
+    subParams := &stripe.SubParams{
+        Customer: newSubscription.CustomerId,
+        Plan: "month-1",
 
-    s, err := sub.New(&stripe.SubParams{
-        Customer: "cus_9pFLB7Uou1HKav",
-        Plan: "month-plan",
+    }
 
-    })
+    subParams.AddMeta("Domain", newSubscription.Domain)
+    domain, _ := domiodb.GetDomain(newSubscription.Domain)
+
+    subParams.Quantity = domain.PricePerMonth;
+    s, err := sub.New(subParams)
     return *s, err
 }
