# swagger/specs/v2/domio.json
@@ -27,8 +27,8 @@
       "description": "Operations about users"
     },
     {
-      "name": "rental",
-      "description": "Access to Domio rentals",
+      "name": "subscription",
+      "description": "Operations with subscriptions",
       "externalDocs": {
         "description": "Find out more",
         "url": "http://swagger.io"
@@ -44,84 +44,6 @@
     }
   ],
   "paths": {
-    "/plans": {
-      "post": {
-        "tags": [
-          "plan"
-        ],
-        "summary": "Add a new subscription plan for a domain",
-        "description": "",
-        "operationId": "addPlan",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "plan",
-            "description": "Plan",
-            "required": false,
-            "schema": {
-              "$ref": "#/definitions/NewPlan"
-            }
-          }
-        ],
-        "responses": {
-          "405": {
-            "description": "Invalid input"
-          }
-        },
-        "security": [
-          {
-            "jwt_key": []
-          }
-        ]
-      },
-      "put": {
-        "tags": [
-          "domain"
-        ],
-        "summary": "Update an existing domain",
-        "description": "",
-        "operationId": "updatePet",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "description": "Pet object that needs to be added to the store",
-            "required": false,
-            "schema": {
-              "$ref": "#/definitions/Domain"
-            }
-          }
-        ],
-        "responses": {
-          "405": {
-            "description": "Validation exception"
-          },
-          "404": {
-            "description": "Pet not found"
-          },
-          "400": {
-            "description": "Invalid ID supplied"
-          }
-        },
-        "security": [
-          {
-            "jwt_key": []
-          }
-        ]
-      }
-    },
     "/subscriptions": {
       "post": {
         "tags": [
@@ -150,47 +72,6 @@
         "responses": {
           "405": {
             "description": "Invalid input"
-          }
-        },
-        "security": [
-          {
-            "jwt_key": []
-          }
-        ]
-      },
-      "put": {
-        "tags": [
-          "domain"
-        ],
-        "summary": "Update an existing domain",
-        "description": "",
-        "operationId": "updatePet",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "description": "Pet object that needs to be added to the store",
-            "required": false,
-            "schema": {
-              "$ref": "#/definitions/Domain"
-            }
-          }
-        ],
-        "responses": {
-          "405": {
-            "description": "Validation exception"
-          },
-          "404": {
-            "description": "Pet not found"
-          },
-          "400": {
-            "description": "Invalid ID supplied"
           }
         },
         "security": [
@@ -520,150 +401,6 @@
         ]
       }
     },
-    "/payments": {
-      "post": {
-        "tags": [
-          "payment"
-        ],
-        "summary": "Make a payment for Rental",
-        "description": "",
-        "operationId": "payForRent",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "description": "order placed for purchasing the pet",
-            "required": false,
-            "schema": {
-              "$ref": "#/definitions/NewPayment"
-            }
-          }
-        ],
-        "security": [
-          {
-            "jwt_key": []
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "$ref": "#/definitions/Payment"
-            }
-          },
-          "400": {
-            "description": "Invalid Order"
-          }
-        }
-      }
-    },
-    "/rentals": {
-      "post": {
-        "tags": [
-          "rental"
-        ],
-        "summary": "Rent a domain",
-        "description": "",
-        "operationId": "rentDomain",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "description": "order placed for purchasing the pet",
-            "required": false,
-            "schema": {
-              "$ref": "#/definitions/NewRental"
-            }
-          }
-        ],
-        "security": [
-          {
-            "jwt_key": []
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "$ref": "#/definitions/Rental"
-            }
-          },
-          "400": {
-            "description": "Invalid Order"
-          }
-        }
-      }
-    },
-    "/rentals/{rentalId}": {
-      "get": {
-        "tags": [
-          "rental"
-        ],
-        "summary": "Find purchase order by ID",
-        "description": "For valid response try integer IDs with value <= 5 or > 10. Other values will generated exceptions",
-        "operationId": "getOrderById",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "rentalId",
-            "description": "ID of domain that needs to be fetched",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "404": {
-            "description": "Order not found"
-          },
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "$ref": "#/definitions/Rental"
-            }
-          },
-          "400": {
-            "description": "Invalid ID supplied"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "rental"
-        ],
-        "summary": "Delete purchase order by ID",
-        "description": "For valid response try integer IDs with value < 1000. Anything above 1000 or nonintegers will generate API errors",
-        "operationId": "deleteOrder",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "rentalId",
-            "description": "ID of the order that needs to be deleted",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "404": {
-            "description": "Order not found"
-          },
-          "400": {
-            "description": "Invalid ID supplied"
-          }
-        }
-      }
-    },
     "/users": {
       "post": {
         "tags": [
@@ -820,34 +557,6 @@
             "description": "Invalid user supplied"
           }
         }
-      },
-      "delete": {
-        "tags": [
-          "user"
-        ],
-        "summary": "Delete user",
-        "description": "This can only be done by the logged in user.",
-        "operationId": "deleteUser",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "username",
-            "description": "The name that needs to be deleted",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "404": {
-            "description": "User not found"
-          },
-          "400": {
-            "description": "Invalid username supplied"
-          }
-        }
       }
     }
   },
@@ -998,58 +707,27 @@
     "NewDomain": {
       "required": [
         "name",
-        "plan"
+        "price_per_month"
       ],
       "properties": {
         "name": {
           "type": "string",
           "example": "john.com"
         },
-        "plan": {
-          "type": "string",
-          "example": "month-1000"
-        }
-      }
-    },
-    "NewPlan": {
-      "required": [
-        "name",
-        "amount",
-        "interval"
-      ],
-      "properties": {
-        "name": {
-          "type": "string",
-          "example": "Month plan"
-        },
-        "amount": {
+        "price_per_month": {
           "type": "integer",
-          "example": "1000"
-        },
-        "interval": {
-          "type": "string",
-          "enum": [
-            "month",
-            "yearly",
-            "every3months",
-            "every6months"
-          ],
-          "example": "month"
-        },
-        "id": {
-          "type": "string",
-          "example": "month-400"
+          "example": 1000
         }
       }
     },
     "NewSubscription": {
       "required": [
-        "plan"
+        "domain"
       ],
       "properties": {
-        "plan": {
+        "domain": {
           "type": "string",
-          "example": "month-400"
+          "example": "john.com"
         }
       }
     },
@@ -1061,37 +739,6 @@
         },
         "name": {
           "type": "string"
-        }
-      }
-    },
-    "Rental": {
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "domain": {
-          "type": "string"
-        },
-        "start": {
-          "type": "string",
-          "format": "date-time"
-        }
-      }
-    },
-    "NewRental": {
-      "properties": {
-        "domain_name": {
-          "type": "string",
-          "example": "john.com"
-        }
-      }
-    },
-    "NewPayment": {
-      "properties": {
-        "rental_id": {
-          "type": "integer",
-          "example": 27
         }
       }
     }
